# live555_with_cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.aarch64linux
BasicUsageEnvironment/: CMakeLists.txt  Makefile
UsageEnvironment/: CMakeLists.txt  Makefile
groupsock/: CMakeLists.txt  Makefile
hlsProxy/: CMakeLists.txt  Makefile
liveMedia/: CMakeLists.txt  Makefile
mediaServer/: CMakeLists.txt  Makefile
proxyServer/: CMakeLists.txt  Makefile
testProgs/: CMakeLists.txt  Makefile
